--- a/src/app.scss
+++ b/src/app.scss
@@ -1,1 +1,12 @@
-@import "~taro-ui-vue/dist/style/index.scss"; // 引入组件样式，仅需引入一次即可
+@import "~taro-ui-vue3/dist/style/index.scss"; // 引入组件样式，仅需引入一次即可
+taro-text-core{
+    white-space: unset!important;
+}
+taro-button-core[plain][type=primary]{
+    color: #6190E8!important;
+    border: 1px solid #6190E8!important;
+}
+
+taro-button-core[type=primary] {
+    background-color: #6190E8!important;
+}
